# discord-drawing-rpc

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
flatpak/: README.md  com.TheGameratorT.DiscordDrawingRPC.metainfo.xml.in  com.TheGameratorT.DiscordDrawingRPC.yml.in  generate_manifest.cmake
installer/: README.md  build_installer.cmake
installer/config/: config.xml  config.xml.in
resources/: app_gui.rc  discord-drawing-rpc.desktop  discord-drawing-rpc.desktop.in
src/common/: Common.cpp  Common.h  Config.cpp  Config.h  DaemonIPC.cpp  DaemonIPC.h  PlatformUtils.cpp  PlatformUtils.h  Version.h.in
src/daemon/: DiscordRPC.cpp  DiscordRPC.h  DiscordRPCDaemon.cpp  DiscordRPCDaemon.h  main.cpp
src/gui/: CropWidget.cpp  CropWidget.h  LogViewerDialog.cpp  LogViewerDialog.h  MainWindow.cpp  MainWindow.h  ScreenshotSelector.cpp  ScreenshotSelector.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
src/tray/: TrayIcon.cpp  TrayIcon.h  main.cpp
